# openpuck

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_MAP.md  Makefile  OpenPuck-0.9.22-factory-reset.uf2  OpenPuck-0.9.22-standard.uf2  OpenPuck-0.9.28-factory-reset.uf2  OpenPuck-0.9.28-standard.uf2  OpenPuck-0.9.31-factory-reset.uf2  OpenPuck-0.9.31-standard.uf2  OpenPuck.ino  README.md  gen_uf2.sh  gen_version.sh  manifest.json
.github/workflows/: build.yml  format.yml  picopuck.yml  release.yml  zephyr-build.yml
3d_print_files/: OpenPuckCase1.0  OpenPuckCase1.0.step  OpenPuckCase_NoLogo1.0.step  OpenPuckCase_NoLogo1.0.stl
OpenPuck/: OpenPuck.ino  audio.cpp  audio.h  ble_host.cpp  ble_host.h  board_config.h  bonds.cpp  bonds.h  config.cpp  config.h  controllers.cpp  controllers.h  drv_xinput_ble.cpp  drv_xinput_ble.h  esb_backend.cpp  esb_backend.h  fault_diag.cpp  fault_diag.h  fw_update.cpp  fw_update.h  gamepad_util.cpp  gamepad_util.h  haptics.cpp  haptics.h  identity.cpp  identity.h  input_driver.cpp  input_driver.h  lizard_map.cpp  lizard_map.h  mode_hidgyro.cpp  mode_hidgyro.h  mode_lizard.cpp  mode_lizard.h  mode_ps3.cpp  mode_ps5.cpp  mode_ps5.h  mode_switch_hori.cpp  mode_switch_hori.h  mode_switch_pro.cpp  (+30 more)
OpenPuckZephyr/: ARCHITECTURE.zephyr.md  CMakeLists.txt  prj.conf
OpenPuckZephyr/src/: main.cpp  mode_xinput.cpp
OpenPuckZephyr/src/compat/: Adafruit_TinyUSB.h  usb_device_setup.cpp  usb_glue.cpp  usb_xinput_class.cpp
PicoPuck/: CMakeLists.txt  NOTICE  README.md
PicoPuck/src/: main.c
PicoPuck/src/bt/: bt_control.h  bt_control_stub.c  bt_host.c  bt_host.h  bt_valve.c  bt_valve.h  drv_ds4.c  drv_sc2.c  drv_xinput.c  input_driver.c  input_driver.h
PicoPuck/src/config/: btstack_config.h  picopuck_config.h  tusb_config.h
PicoPuck/src/puck/: identity.c  identity.h  personality.c  personality.h  relay.c  relay.h  slots.c  slots.h  triton.c  triton.h
PicoPuck/src/usb/: puck_desc.c  puck_desc.h  usb_descriptors.c  usb_descriptors.h  usb_tx.c  usb_tx.h  webusb.c  webusb.h
ReversePuck/: PUCK_CLONING.md  README.md  ReversePuck  frame.py  input_source.py  openctrl.py  scpair.py  setup.sh  ui.py
ReversePuckFirmware/: ReversePuckFirmware.ino  ctrl_bonds.cpp  ctrl_bonds.h  ctrl_link.cpp  ctrl_link.h  ctrl_usb.cpp  ctrl_usb.h  deck_input.cpp  deck_input.h  fw_update.cpp  fw_update.h  identity.cpp  identity.h  radio.cpp  radio.h  report45.cpp  report45.h  triton.cpp  triton.h  webusb_ctrl.cpp  webusb_ctrl.h
docs/: BUILD_AND_DEPLOY.md  ESB_MIGRATION.md  PROTOCOL.md  WEBUSB_LINUX.md  index.html
pairtui/: scmd.c
puck_sniffer/: README.md  puck_sniffer.ino  radio.cpp  radio.h
tools/: check-trailing-comments.py
variant_lfrc/: variant.h
